tests/snapshots/ui_tests__nord_theme.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local /test/path───╮ Remote (S3): 0 [Path╮ Job #1 Details ───────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │Status: uploading                                          │
│  Quarantine   │ -         -        │                     │Path:   /uploads/document.pdf                              │
│  Logs         │ -         -        │                     │Session: test-session                                      │
│  Settings     │ 1.0 KB    -        │                     │Report:  scan_report_test-session.txt                      │
│               │ 2.0 MB    -        │                     │Size:   4.77 MB                                            │
│               │                    │                     │Scan:   clean                                              │
│               │                    │                     │Upload: none                                               │
│               │                    │                     │Scan Time:   500ms                                         │
│               │                    │                     │                                                           │
│               │                    │                     │DATA INTEGRITY (SHA256):                                   │
│               │                    │                     │Local:  Calculating...                                     │
│               │                    │                     │Remote: Not uploaded                                       │
│               │                    │                     │                                                           │
│               │                    │                     │DETAILS / ERRORS:                                          │
│               │                    │                     │none                                                       │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯                                                           │
│               │ Queue (Jobs)                             │                                                           │
│               │File                 Statu Size Progr Time│                                                           │
│               │📄  document.pdf      uploa 4.77 ░░░░░ 2h a│                                                           │
│               │📄  image.png         compl 2.38 █████ 2h a│                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
↑/↓ Select  │  p Pause/Resume  │  +/- Pr             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 2  │  Threats: 0
