tests/snapshots/ui_tests__quarantine_view_empty.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Quarantine Zone ─────────────────────────╮ History [All] ────────────────────────────────────────────╮
│  Transfers    │File                 Threat Status  Time  │File                 Status           Size       Time      │
│▌ Quarantine   │                                          │                                                           │
│  Logs         │                                          │                                                           │
│  Settings     │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
← Rail  │  d Clear  │  R Refresh  │  Tab             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
