tests/snapshots/ui_tests__quit_confirmation_modal.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local /test/path───╮ Remote (S3): 0 [Path╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │File                 Status           Size       Time      │
│  Quarantine   │ -         -        │                     │                                                           │
│  Logs         │ -         -        │                     │                                                           │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │             ╭ Confirmation ────────────────────────────────────────────╮                             │
│               │             │                                                          │                             │
│               ╰─────────────│                       Quit Drifter?                      │                             │
│               │ Queue (Jobs)│                                                          │                             │
│               │File         │                                                          │                             │
│               │             │            Enter/y: Confirm  |  Esc/n: Cancel            │                             │
│               │             │                                                          │                             │
│               │             ╰──────────────────────────────────────────────────────────╯                             │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
Enter/y Confirm  │  Esc/n Cancel                     ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
