tests/snapshots/ui_tests__remote_browsing_hints.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │  Name               │File                     Result   Route    Size    Duration│
│  Quarantine   │ -         -        │> 📁  reports/        │                                                           │
│  Logs         │ -         -        │  📄  data.csv        │                                                           │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               ╰────────────────────╯─────────────────────╯                                                           │
│               │ Queue (Jobs)                             │                                                           │
│               │File             Op Ro Fr To S Si Pr Av ET│                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
←/→ Navigate  │  ↑/↓ Select  │  [] Endpo             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
