tests/snapshots/ui_tests__remote_delete_folder_confirmation.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local Source /test/╮ Remote Destination (╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │File                     Result   Route    Size    Duration│
│  Quarantine   │ -         -        │                     │                                                           │
│  Logs         │ -         -        │                     │                                                           │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │             ╭ Confirmation ────────────────────────────────────────────╮                             │
│               │             │                                                          │                             │
│               ╰─────────────│         Delete folder 'archive' and all contents?        │                             │
│               │ Queue (Jobs)│                                                          │                             │
│               │File         │                                                          │                             │
│               │             │            Enter/y: Confirm  |  Esc/n: Cancel            │                             │
│               │             │                                                          │                             │
│               │             ╰──────────────────────────────────────────────────────────╯                             │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
Enter/y Confirm  │  Esc/n Cancel                     ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
