tests/snapshots/ui_tests__remote_folder_create_modal.snap
---
source: tests/ui_tests.rs
expression: output
---
╭ Navigation ───╭ Local /test/path───╮ Remote (S3): 0 [Path╮ History [All] ────────────────────────────────────────────╮
│▌ Transfers    │ Size      Modified │Name                 │File                 Status           Size       Time      │
│  Quarantine   │ -         -        │                     │                                                           │
│  Logs         │ -         -        │                     │                                                           │
│  Settings     │ 1.0 KB    -        │                     │                                                           │
│               │ 2.0 MB    -        │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │                    │                     │                                                           │
│               │             ╭ Create Remote Folder ────────────────────────────────────╮                             │
│               │             │                                                          │                             │
│               │             │ Enter folder name:                                       │                             │
│               ╰─────────────│ ┌──────────────────────────────────────────────────────┐ │                             │
│               │ Queue (Jobs)│ │reports_2025                                          │ │                             │
│               │File         │ └──────────────────────────────────────────────────────┘ │                             │
│               │             │                Enter: Create | Esc: Cancel               │                             │
│               │             │                                                          │                             │
│               │             │                                                          │                             │
│               │             ╰──────────────────────────────────────────────────────────╯                             │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │                                                           │
│               │                                          │───────────────────────────────────────────────────────────╯
│               │                                          │ Metrics                                                   │
│               │                                          │Disk Read:  0 B               Net Down: 0 B                │
│               │                                          │Disk Write: 0 B               Net Up:   0 B                │
╰───────────────╰──────────────────────────────────────────╯───────────────────────────────────────────────────────────╯
Enter Create  │  Esc Cancel  │  Tab Navi             ClamAV: Connected  │  S3: Not Configured  │  Jobs: 0  │  Threats: 0
